--- a/ximeraUserManual/commonUseCases/commonUseCases.tex
+++ b/ximeraUserManual/commonUseCases/commonUseCases.tex
@@ -182,7 +182,8 @@ have an answer box that is marking anything/everything correct, this is
 probably because there is some kind of typo or character
 in the answer box that it cannot understand.
 
-\paragraph{Floating-point}
+\paragraph{Floating-point computations} are a fact-of-life when working with computers. 
+
 \begin{verbatim}
 \begin{example}
 Compute
@@ -226,6 +227,9 @@ However, it is easily countered in the specific case of the answer box,
 which we detail in the
 \href{https://xronos.clas.ufl.edu/examples/exampleCore/supplemental/hiddenAnswers}{how
   to hide answers} section of the documentation, for those that are interested.
+
+GIVE IMPLEMENTATION OF HIDING ANSWERS VIA COMMAND HERE
+
 
 \paragraph{Answer box size}
 If you are in a situation where you want a student to solve for a portion
