--- a/ximeraUserManual/coverArt/frontCover.tex
+++ b/ximeraUserManual/coverArt/frontCover.tex
@@ -51,7 +51,7 @@
 \ifnotoc
 \else\twocolumn
   \tableofcontents\clearpage
-  \clearpage
+  \mbox{}\cleardoublepage
 \fi
 \pagestyle{main}
 \let\maketitle\othermaketitle
