--- a/ximeraUserManual/progressAndCredit/progressAndCredit.tex
+++ b/ximeraUserManual/progressAndCredit/progressAndCredit.tex
@@ -72,107 +72,54 @@ $25\%$ of the total credit.  The breakdown of points is described below:
 
 \begin{description}
     \item[Theorem environment] Worth 25\% contingent on completion.
-        \begin{description} 
+        \begin{description}
             \item[No answerables] Automatically flagged as complete.
         \end{description}
     \item[Question environment] Worth 25\% contingent on completion.
         \begin{description}
-            \item[selectAll] Environment Worth 50\% of the Problem
-                Environments Credit - contingent on completion
-                \begin{itemize}
-                    \item Getting a ``correct'' flag gives completion.
-                \end{itemize}
-
-            \item[Problem environment] Problem Environment Worth 50\% of the Problem
-                Environments Credit - contingent on completion
-                \begin{itemize}
-                    \item Getting a ``correct'' flag on the
-                          \verb|\answer| box gives 100\% of the nested problems
-                          credit for completion.
-                \end{itemize}
+            \item[selectAll] Sub-environment worth 50\% of the enclosing
+                environment contingent on completion.
+            \item[Problem environment] Sub-environment Worth 50\% of the
+                enclosing environment contingent on completion.
         \end{description}
-
     \item[Remark environment] Worth 25\% contingent on
         completion.
         \begin{description}
             \item[No answerables] Automatically flagged as complete.
         \end{description}
-
     \item[Problem environment] Worth 25\% contingent on completion.
-        \begin{itemize}
-            \item Getting a ``correct'' flag gives completion.
-        \end{itemize}
 \end{description}
 
 In table form:
-\begin{center}
-    \begin{tabular}{lcc}
-        Environment & Local Level Credit & (Effective) Total
-        Page Credit                                          \\\hline
-        Theorem 1   &                    & 25\%              \\
-        Problem 1   &                    & 25\%              \\
-        selectAll   & 50\%               & 12.5\%            \\
-        Problem 1.1 & 50\%               & 12.5\%            \\
-        Explanation &                    & 25\%              \\
-        Question 1  &                    & 25\%              \\
-        answerBox   & 100\%              & 25\%
-    \end{tabular}
-\end{center}
-
+\[
+    \begin{array}{lcc}
+        \text{Environment} & \text{Problem Level Credit} & \text{Total Credit}
+        \\\hline
+        \text{Theorem}     &                             & 25\%                \\
+        \text{Question}    &                             & 25\%                \\
+        \text{selectAll}   & 50\%                        & 12.5\%              \\
+        \text{Sub-Problem} & 50\%                        & 12.5\%              \\
+        \text{Remark}      &                             & 25\%                \\
+        \text{Problem}     &                             & 25\%                \\
+        \text{answerBox}   & 100\%                       & 25\%
+    \end{array}
+\]
 So, there are three things to notice here.
 
 \begin{enumerate}
-    \item Environments that don't have interactives (i.e. some kind of
-          way for students to contribute or answer for grade validation)
-          automatically
+    \item Environments that don't have answerables automatically
           give credit as soon as the page is loaded. This also means that a
-          large portion
-          of the tile's credit could (theoretically) be given just for loading
-          the page,
-          without doing anything.
-          \begin{itemize}
-              \item This can actually be a good thing - it's a bit of a
-                    morale booster, and in practice students typically
-                    \textit{really} strive for
-                    perfect scores on these things since they have time to do
-                    it and want every
-                    fraction of a point they can get. So getting some credit
-                    for loading the page
-                    doesn't seem to result in less effort spent on the page -
-                    and tends to make
-                    students feel better about their progress without actually
-                    changing the amount
-                    of progress or effort they expend.
-          \end{itemize}
-    \item The only things that can give credit \textit{are}
-          environments. This means, if you put some kind of interactive (like
-          an answer
-          box) just floating around in the middle of the page without it being
-          in an
-          environment, it won't actually count toward credit for the tile -
-          indeed, it
-          may not even render or resolve correctly.
-    \item Arguably most importantly: since credit is split evenly
+          large portion of the tile's credit could (theoretically) be given just for loading the page,
+          without doing anything. Getting some credit for loading the page doesn't seem to result in less effort spent on the page.
+    \item Only environments give credit. All answerables \textbf{must} be in an environment.
+    \item Since credit is split evenly
           \textbf{at the top-level environment count only}, problems with lots
-          of nested
-          problems, can end up with nested problems that are worth
-          significantly less
-          compared to a problem that has no nested problems. This can be
-          reasonable or
-          not depending on the problem design, but it is worth bearing in mind
-          as you
-          design the problems on your page.
-
+          of parts, nested or not, can end up with nested problems that are worth
+          significantly less compared to a problem that has no nested problems. 
 \end{enumerate}
 
 \section{Progress within a \texttt{xourse}}
 
-Credit for an assignment is determined at the xourse level, where each
-tile (regardless of type or content) is equally weighted toward the percentage
-complete. So if you have 7 activities and 3 practice tiles, then each of those
-tiles is worth 10\% of the credit for the overall assignment. This is good to
-keep in mind as you decide the content of each, since you want to be aware of
-how that impacts the weight of the content \textit{within} the tile - although
-students rarely seem to put that level of thought into it themselves.
+Credit for a \verb!xourse! is split evenly between all Ximera activites listed in the \verb!xourse!.
 
 \end{document}
