--- a/ximeraUserManual/preamble.tex
+++ b/ximeraUserManual/preamble.tex
@@ -31,8 +31,12 @@
 
 
 \newif\ifcolor %% for color cover
+\colorfalse
 \colorlet{bkgndcr}{white}
 \colorlet{txtcr}{black}
+\colorlet{otherbkgndcr}{white}
+\colorlet{othertxtcr}{black}
+
 
 \usepackage{qrcode} %% For QR Codes
 \usepackage[normalem]{ulem} % for strikeout
