--- a/ximeraUserManual/setup/setup.tex
+++ b/ximeraUserManual/setup/setup.tex
@@ -62,8 +62,7 @@ Starting from an existing GitHub repository, you will need to \textbf{copy}
   \item \texttt{.gitignore}
   \item \texttt{.vscode}
   \item \texttt{scripts}
-  \item \texttt{README.md}
-  \item \texttt{NOT-THE-LICENSE.md}
+  \item \texttt{NOT-THE-LICENSE.md} (only if you don't already have a license)
 \end{itemize}
 into your repository. If you already have a \verb|.gitignore| file, we suggest
 you replace yours with ours. Commit your changes to GitHub and view your
