--- a/ximeraUserManual/workflow/workflow.tex
+++ b/ximeraUserManual/workflow/workflow.tex
@@ -9,14 +9,13 @@
 \end{abstract}
 \maketitle
 
-\section{Work on your machine}
-
-MAYBE THE ABOVE SHOULD'T BE THE FIRST SECTION, RATHER AN OPENING PARAGRAPH
+Authors own their content in Ximera and work on their own machine.
 
 
 
 \section{Docker}
 
+Docker is a development utility that allows us to set up a computer within your computer. 
 
 
 \section{Visual Studio Code}
@@ -44,7 +43,12 @@ Convert https repo to ssh repo
 
 
 
+
+
 \section{Using \texttt{git}}
+
+ADDING GRAPHIC VIA GIT
+
 
 All files need to be commited to the GitHub repository.
 Now return to the terminal window, which should still be in the
