--- a/ximeraUserManual/commonUseCases/commonUseCases.tex
+++ b/ximeraUserManual/commonUseCases/commonUseCases.tex
@@ -500,7 +500,7 @@ With a title
 
 
 
-Within a course
+\paragraph{Exercises as part of a course} can be included as a folder within the section that the exercises address. The next section will address this in detail. 
 
 
 
@@ -574,12 +574,16 @@ Within a course
       \node[document] at (0,3) {preamble.tex};
       \node[document] at (0,2) {aFirstStepInXimera.tex};
       \node[folder] at (0,1) {basics};
+      \node[] at (2,-1) {(folder)};
+
 
       % Define the documents in the basics folder
       \node[document] at (8,3) {basicWorksheet.tex};
       \node[document] at (8,2) {missionPatch.jpg};
       \node[document] at (8,1) {graphicsInteractives.tex};
       \node[folder] at (8,0) {exercises};
+      \node[] at (10,-2) {(folder)};
+
 
       % Define the documents in the exercises folder
       \node[document] at (16,3) {exerciseList.tex};
