--- a/ximeraUserManual/workflow/workflow.tex
+++ b/ximeraUserManual/workflow/workflow.tex
@@ -10,15 +10,28 @@
 \maketitle
 
 Authors own their content in Ximera and work on their own machine.
+Nevertheless, with the assistance of Visual Studio Code and Docker, we are able
+to provide a common deployment environment for MacOS, Windows, and Linux.
 
+\paragraph{Docker}
 
+Docker is a development utility that allows us to set up a computer within your
+computer. You must remember to start Docker before you deploy. You can just let
+it run in the background.
 
-\section{Docker}
+\paragraph{Visual Studio Code}
+is a popular text-editor. It is has strong \LaTeX, GitHub,
+and Docker integration. It provides a UNIX-like command line interface for
+Windows machines via WSL. A typical workflow would be to:
+\begin{enumerate}
+    \item Open Docker and minimize the window.
+    \item Open Visual Studio Code, do File $\to$ Open Folder, and select the
+          folder of your git repository.
+    \item To open files, do \verb!Ctrl-p! and start typing file names. Any file
+          committed to your git repository will be found, and files in
+          \verb!.gitignore!, will not be shown.
+\end{enumerate}
 
-Docker is a development utility that allows us to set up a computer within your computer. 
-
-
-\section{Visual Studio Code}
 Commands like \verb!Ctrl-~! and \verb!Ctrl-p! \verb!Ctrl-Shift-p!
 
 Docker commands like
@@ -34,21 +47,13 @@ docker
 
 markdown
 
-
-
 GitHub and ssh
 
 Convert https repo to ssh repo
 
-
-
-
-
-
 \section{Using \texttt{git}}
 
 ADDING GRAPHIC VIA GIT
-
 
 All files need to be commited to the GitHub repository.
 Now return to the terminal window, which should still be in the
@@ -70,8 +75,6 @@ the
 \verb! -m!. If you are changing multiple files, you can use
 \verb!git add -u!.
 
-
-
 Now add this file to git and commit your changes. Back in the terminal,
 change to the directory \verb!anExampleCourse!
 and execute the following commands
@@ -82,7 +85,6 @@ git commit -m "Added first activity file"
 
 \section{Deploying and debugging}
 
-
 \begin{verbatim}
 ./scripts/xmlatex -i bash
 xake -v compile FILE-NAME.tex
@@ -90,8 +92,6 @@ more FILE-NAME.tex.log
 pdflatex FILE-NAME.tex
 \end{verbatim}
 
-
 Slowly move \verb!\end{document}! down a document.
-
 
 \end{document}
