--- a/ximeraUserManual/workflow/workflow.tex
+++ b/ximeraUserManual/workflow/workflow.tex
@@ -17,7 +17,8 @@ to provide a common deployment environment for MacOS, Windows, and Linux.
 
 Docker is a development utility that allows us to set up a computer within your
 computer. You must remember to start Docker before you deploy. You can just let
-it run in the background.
+it run in the background. You can check the status of Docker by running
+\verb!docker ps! in a terminal session.
 
 \paragraph{Visual Studio Code}
 is a popular text-editor. It is has strong \LaTeX, GitHub,
@@ -35,9 +36,6 @@ Windows machines via WSL. A typical workflow would be to:
 Commands like \verb!Ctrl-~! and \verb!Ctrl-p! \verb!Ctrl-Shift-p!
 
 Docker commands like
-\verb!docker ps!
-
-\subsection{Extensions for Visual Studio Code}
 
 \LaTeX
 
