--- a/ximeraUserManual/coverArt/frontCover.tex
+++ b/ximeraUserManual/coverArt/frontCover.tex
@@ -46,7 +46,7 @@
 \mbox{}
 \vspace{3cm}
 \begin{center}
-\huge\it To lovers of mathematics everywhere.
+\Large\it To lovers of mathematics everywhere.
 \end{center}
 \ifnotoc
 \else\twocolumn
