--- a/ximeraUserManual/commonUseCases/commonUseCases.tex
+++ b/ximeraUserManual/commonUseCases/commonUseCases.tex
@@ -15,7 +15,7 @@
 There are many ways our friends use Ximera. Some make worksheets, some make
 exercise banks, and some make full textbooks. Common to all of these are the
 use of interactive elements that students submit answers to. We'll call
-anything a student can ``answer'' an \textbf{answerable}.
+anything a student can \textit{answer} an \textbf{answerable}.
 
 \begin{warning}
   All answerables must be \textbf{inside of a theorem-like environment}.
@@ -35,8 +35,8 @@ The basic way of including a answerable item in Ximera is to use the
   and also be \textbf{inside of a
     theorem-like environment}.
 \end{warning}
-Here are some examples of how to use \verb!\answer!:
-
+Here are some examples of how to use \verb!\answer!. We can validate a single
+number:
 \begin{verbatim}
 \begin{problem}
 State the answer to life, the universe, and everything.
@@ -45,16 +45,16 @@ State the answer to life, the universe, and everything.
 \]
 \end{problem}
 \end{verbatim}
-
+We can validate an expression of variables:
 \begin{verbatim}
 \begin{exercise}
 Compute:
 \[
-\frac{d}{dx} \sin(3x) =  \answer{3\cos(3x)}
+\frac{\partial}{\partial x} \sin(3xyx) =  \answer{3yz\cos(3xyz)}
 \]
 \end{exercise}
 \end{verbatim}
-
+We can validate with several answerables in an environment:
 \begin{verbatim}
 \begin{question}
 For each of the following functions, find $x$ such that it is a critical point, or write ``NA'' if none exists.
@@ -69,28 +69,24 @@ Find $x$ such that where $f(x) = |x-4|$ has a critical point or
 There are also a number of optional arguments that can be passed
 to the \verb|\answer| command.
 \begin{description}
-  \item[tolerance] The Tolerance key-value sets a $\pm$ value on the
+  \item[tolerance] sets a $\pm$ value on the
     author's (numeric) answer that will be accepted from a student. For
     example,
     the answer box \verb|\answer[tolerance=5]{100}| will accept anything in
     the range of $[95,105]$ as correct.
-  \item[format=string] This is for validating ``words'' typed into an answer
-    box. Here
-    \verb|$\answer[format=string]{Cat}$| will validate \verb!Cat!,
+  \item[format=string] validates \textit{words} typed into an
+    answer box. Here \verb|$\answer[format=string]{Cat}$| will validate
+    \verb!Cat!,
     \verb!cAt!,\verb!caT!, \verb!cat! all as
     correct. However, if spaces are inserted before, between, or after, it will
     be marked as incorrect.
-  \item[given] Sometimes you will need to show an answer in the PDF for the
-    content to be understandable in a PDF setting. Here ``given'' means that
-    the
-    answer is ``given'' to the student in the PDF.
-  \item[validator] This is an advanced topic. This key-value allows you to load
-    a validator in-line
-    from a prior javascript environment.
-  \item[id] This is an advanced topic. This is used to set an id for the
-    student's answer, which can be
-    called by a validator or some other code.
+  \item[given] will show an answer in the PDF. Sometimes it is necessary to
+    show such content to ensure
+    understandable in a PDF setting. Here \textit{given} means
+    that the answer is \textit{given} to the student in the PDF.
 \end{description}
+There are two other optional arguments \verb{validator} and \verb{id}, but they
+are for building custom validators and are beyond the scope of this document.
 
 \begin{warning}
   You separate options in \verb!\answer! using commas and there can be no
@@ -136,13 +132,15 @@ answer is not too difficult to type in.
 \paragraph{It checks for equality}
 Although the validation technique is impressively comprehensive in
 practice, that can be problematic when you want the answer in a specific
-\textit{form}. For example if you want students to sum numbers, you will have to use 
+\textit{form}. For example if you want students to sum numbers, you will have
+to use
 \begin{verbatim}
 \[
 1+2 = \answer[format=string]{3}
 \]
 \end{verbatim}
-For other specific forms, like factoring polynomials, you will need to use a custom validator. 
+For other specific forms, like factoring polynomials, you will need to use a
+custom validator.
 
 \paragraph{Ximera is not designed for high-stakes assessment} All content is
 open and students can find the source if they look hard enough. Moreover,
@@ -152,20 +150,24 @@ Ximera content will not render.
 
 For accessibility reasons (like screen readers and the like) the library
 that powers the answer box has a bunch of features bundled in, one of which is
-the ability to right-click and get different formatting of its contents.
+the ability to \textbf{right-click and get different formatting} of its
+contents.
 Unfortunately, if you right-click and go to ``show math as'' and then ``tex
-commands'' you can very easily see the contents of the answer command that was
-used in the answer file. This information isn't necessary for accessibility
+commands'' you can \textbf{very easily see the contents of the answer command}.
+
+This information isn't necessary for accessibility
 (after all, the answer box is suppose to contain the actual content supplied by
 the student, and doesn't have any content the student needs to know about) but
 it's tied to the behavior of the underlying library that supports \textit{all}
 the rendered math on the page, so we can't remove it without killing
-\textit{all} accessibility.
+\textit{all} accessibility\dots yet.
 
-However, it is easily countered in the specific case of the answer box,
+However, it is easily countered in \textit{specific cases} of the answer box,
 which we detail in the
 \href{https://xronos.clas.ufl.edu/examples/exampleCore/supplemental/hiddenAnswers}{how
   to hide answers} section of the documentation, for those that are interested.
+
+GIVE IMPLEMENTATION OF HIDING ANSWERS VIA COMMAND HERE
 
 \paragraph{Ricardson's theorem} forces the developers of Ximera to make a
 decision:
@@ -181,7 +183,8 @@ have an answer box that is marking anything/everything correct, this is
 probably because there is some kind of typo or character
 in the answer box that it cannot understand.
 
-\paragraph{Floating-point computations} are a fact-of-life when working with computers. 
+\paragraph{Floating-point computations} are a fact-of-life when working with
+computers.
 
 \begin{verbatim}
 \begin{example}
@@ -207,28 +210,6 @@ having extra terms that it is important for students to realize exist (e.g. you
 want to verify they used the chain rule and not just the base derivative rule)
 but the ``extra part'' doesn't seem to matter to Ximera - this is typically an
 issue of machine precision.
-
-\paragraph{Answers are exposed via right-click}
-
-For accessibility reasons (like screen readers and the like) the library
-that powers the answer box has a bunch of features bundled in, one of which is
-the ability to right-click and get different formatting of its contents.
-Unfortunately, if you right-click and go to ``show math as'' and then ``tex
-commands'' you can very easily see the contents of the answer command that was
-used in the answer file. This information isn't necessary for accessibility
-(after all, the answer box is suppose to contain the actual content supplied by
-the student, and doesn't have any content the student needs to know about) but
-it's tied to the behavior of the underlying library that supports \textit{all}
-the rendered math on the page, so we can't remove it without killing
-\textit{all} accessibility.
-
-However, it is easily countered in the specific case of the answer box,
-which we detail in the
-\href{https://xronos.clas.ufl.edu/examples/exampleCore/supplemental/hiddenAnswers}{how
-  to hide answers} section of the documentation, for those that are interested.
-
-GIVE IMPLEMENTATION OF HIDING ANSWERS VIA COMMAND HERE
-
 
 \paragraph{Answer box size}
 If you are in a situation where you want a student to solve for a portion
@@ -318,10 +299,15 @@ Select all prime numbers:
 \end{selectAll}
 \end{problem}
 \end{verbatim}
-These problems can be very challenging for students. Authors can quickly make
+Select all problems can be very challenging for students. Authors can quickly
+make
 questions that are quite difficult without realizing it.
 
 \paragraph{Word choice}
+Word choice problems were designed for inline \textit{words}; however, at this
+point we
+do support math in the choices. We give an example of \verb!\wordChoice! in
+action below:
 \begin{verbatim}
 \begin{exercise}
  Consider the planes defined by the equations below.
@@ -330,13 +316,15 @@ questions that are quite difficult without realizing it.
   P_2:  \quad  5&=4x-2y+6z\\ 
   P_3:  \quad  7&=5x+2y+z
 \end{align*}
-Describe the relationships between the planes $P_1$, $P_2$, and $P_3$
-in terms of ``parallel,'' ``orthogonal,'' or ``neither.''
+Describe the relationships between the planes 
+$P_1$, $P_2$, and $P_3$in terms of ``parallel,'' 
+``orthogonal,'' or ``neither.''
 \begin{enumerate}
   \item The planes $P_1$ and $P_2$ are \wordChoice{
     \choice[correct]{parallel}
     \choice{orthogonal}
-    \choice{neither parallel nor orthogonal}}.
+    \choice{neither parallel nor orthogonal}
+    }
   \item The planes $P_1$ and $P_3$ are \wordChoice{
     \choice{parallel}
     \choice{orthogonal}
@@ -345,15 +333,13 @@ in terms of ``parallel,'' ``orthogonal,'' or ``neither.''
   \item The planes $P_2$ and $P_3$ are \wordChoice{
     \choice{parallel}
     \choice{orthogonal}
-    \choice[correct]{neither parallel nor orthogonal}}.
+    \choice[correct]{neither parallel nor orthogonal}
+    }
 \end{enumerate}
 \end{exercise}
 \end{verbatim}
-
-
-
-
-
+It is difficult to have a PDF version of \verb!\wordChoice! so authors should
+take this into consideration.
 
 \section{Worksheets}
 
@@ -376,16 +362,14 @@ different.
 
       % Thick grey lines
       \draw[line width=200pt,white!85!black,line cap=round] (2,1.5) -- (2,-4);
-      \draw[line width=200pt,white!85!black,line cap=round] (10,1.5) -- (10,-4);
+      \draw[line width=200pt,white!85!black,line cap=round] (10,1.5) --
+      (10,-4);
 
       % Connections
       \draw[ultra thick] (2,-.4) -- (8,.1);
       \draw[ultra thick] (2,-.4) -- (8,-.9);
       \draw[ultra thick] (2,-3.4) -- (8,-2.9);
       \draw[ultra thick] (2,-3.4) -- (8,-3.9);
-
-
-  
 
       % Symbols at top
       \node at (2,4) {\Huge \tt ./};
@@ -398,7 +382,6 @@ different.
       \node[] at (2,-1) {(folder)};
       \node[folder] at (0,-2) {anotherWorksheet};
       \node[] at (2,-4) {(folder)};
-
 
       % Define the documents in the worksheets folder
       \node[document] at (8,.5) {someWorksheet.tex};
@@ -416,7 +399,6 @@ different.
   }
 \end{center}
 
-
 \paragraph{Use cases}
 
 \section{Exercise banks}
@@ -427,9 +409,7 @@ With no title
 
 With a title
 
-
 \paragraph{File structure}
-
 
 \begin{center}
   \scalebox{.7}{
@@ -445,7 +425,8 @@ With a title
 
       % Thick grey lines
       \draw[line width=200pt,white!85!black,line cap=round] (2,1.5) -- (2,-4);
-      \draw[line width=200pt,white!85!black,line cap=round] (10,1.5) -- (10,-4);
+      \draw[line width=200pt,white!85!black,line cap=round] (10,1.5) --
+      (10,-4);
 
       % Connections
       \draw[ultra thick] (2,.6) -- (8,2.6);
@@ -469,20 +450,16 @@ With a title
       \node[folder] at (0,-1) {anotherTopic};
       \node[] at (2,-3) {(folder)};
 
-
       % Define the documents in the exercises folder
       \node[document] at (8,3) {exerciseList.tex};
       \node[document] at (8,2) {exercise2a.tex};
       \node[document] at (8,1) {anotherExercise.tex};
       \node[document] at (8,0) {funExercise.tex};
 
-
       \node[document] at (8,-1) {exerciseList.tex};
       \node[document] at (8,-2) {exerciseMine.tex};
       \node[document] at (8,-3) {someExercise.tex};
       \node[document] at (8,-4) {exercise3c.tex};
-
-
 
       % paths at bottom
       \node at (2,-5.5) {\tt\textbackslash input\{./preamble\}};
@@ -493,20 +470,9 @@ With a title
   }
 \end{center}
 
-
-
-
-
-
-
-
-\paragraph{Exercises as part of a course} can be included as a folder within the section that the exercises address. The next section will address this in detail. 
-
-
-
-
-
-
+\paragraph{Exercises as part of a course} can be included as a folder within
+the section that the exercises address. The next section will address this in
+detail.
 
 \pdfOnly{\onecolumn\begin{multicols}{2}}
     \section{Courses}
@@ -576,14 +542,12 @@ With a title
       \node[folder] at (0,1) {basics};
       \node[] at (2,-1) {(folder)};
 
-
       % Define the documents in the basics folder
       \node[document] at (8,3) {basicWorksheet.tex};
       \node[document] at (8,2) {missionPatch.jpg};
       \node[document] at (8,1) {graphicsInteractives.tex};
       \node[folder] at (8,0) {exercises};
       \node[] at (10,-2) {(folder)};
-
 
       % Define the documents in the exercises folder
       \node[document] at (16,3) {exerciseList.tex};
@@ -620,7 +584,7 @@ students work. We have special environments for this.
 While \textbf{any} environment can contain the command \verb|\answer|,
 there are four special environments: \verb|question|, \verb|exercise|,
 \verb|problem|, \verb|exploration|. If these environments are nested within
-each other, They ``hide'' the inside environment. For example
+each other, They \textit{hide} the inside environment. For example
 
 \begin{problem}
 Expanding Problen
