--- a/ximeraUserManual/workflow/workflow.tex
+++ b/ximeraUserManual/workflow/workflow.tex
@@ -5,14 +5,13 @@
 
 \begin{document}
 \begin{abstract}
-    Suggestions for working on Ximera documents.
+      Suggestions for working on Ximera documents.
 \end{abstract}
 \maketitle
 
 Authors own their content in Ximera and work on their own machine.
 Nevertheless, with the assistance of Visual Studio Code and Docker, we are able
 to provide a common deployment environment for MacOS, Windows, and Linux.
-
 
 \section{Docker and Visual Studio Code}
 
@@ -28,15 +27,16 @@ is a popular text-editor. It is has strong \LaTeX, GitHub,
 and Docker integration. It provides a UNIX-like command line interface for
 Windows machines via WSL. A typical workflow would be to:
 \begin{enumerate}
-    \item Open Docker and minimize the window.
-    \item Open Visual Studio Code, do File $\to$ Open Folder, and select the
-          folder of your git repository.
-    \item To open files, do \verb!Ctrl-p! and start typing file names. Any file
-          committed to your git repository will be found, and files in
-          \verb!.gitignore!, will not be shown.
-    \item To run a special command (like search and replace) do
-          \verb!Ctrl-Shift-p!, and search for the command.
-    \item To open a terminal, use \verb!Ctrl-~!.
+      \item Open Docker and minimize the window.
+      \item Open Visual Studio Code, do File $\to$ Open Folder, and select the
+            folder of your git repository.
+      \item To open files, do \verb!Ctrl-p! and start typing file names. Any
+            file
+            committed to your git repository will be found, and files in
+            \verb!.gitignore!, will not be shown.
+      \item To run a special command (like search and replace) do
+            \verb!Ctrl-Shift-p!, and search for the command.
+      \item To open a terminal, use \verb!Ctrl-~!.
 \end{enumerate}
 
 \section{Using \texttt{git}}
@@ -45,8 +45,8 @@ When you use GitHub, you are writing code in public. You don't want randos to
 be able to change your code, and they cannot.  But that same protection makes
 it difficult for you to develop. So we need to set up a bit of security, called
 SSH, so that you can authenticate but others cannot.
-Once we are finished with that, we will give you some basic \texttt{git} commands. 
-
+Once we are finished with that, we will give you some basic \texttt{git}
+commands.
 
 \paragraph{Setting up SSH} GitHub requires some security. One way to do this is
 to add an SSH key. To check to see if this is already done, open Visual Studio
@@ -54,38 +54,50 @@ Code, open a (WSL) terminal with \verb!Ctrl-~! and enter
 \begin{verbatim}
 git remote -v
 \end{verbatim}
-if it responds with something like: If it responds with \verb!git@github.com:STUFF! then you
-are good and can skip this. If not, and it responds with  \verb!https://github.com/STUFF! the you
+if it responds with something like: If it responds with
+\verb!git@github.com:STUFF! then you
+are good and can skip this. If not, and it responds with
+\verb!https://github.com/STUFF! the you
 need to change to SSH, read on!
 
 First we must create the key. There are instructions on \link[GitHub's pages]{https://docs.github.com/en/authentication/connecting-to-github-with-ssh/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent}
 Once the key is created, go to your personal GitHub page, like
 \verb!https://github.com/bartsnapp! and:
 \begin{enumerate}
-    \item  Click on \textit{Settings}, it lives in the circular picture in
-          upper right hand corner.
-    \item Click on \textit{SSH and GPG keys}, it's on the left.
-    \item Click the green button \textit{New SSH key}
-    \item Name it \textit{My Ximera Key}.
-    \item Paste in your Key.
+      \item  Click on \textit{Settings}, it lives in the circular picture in
+            upper right hand corner.
+      \item Click on \textit{SSH and GPG keys}, it's on the left.
+      \item Click the green button \textit{New SSH key}
+      \item Name it \textit{My Ximera Key}.
+      \item Paste in your Key.
 \end{enumerate}
 Now when you clone a repository, you will use the SSH option.  To convert a
 repository from the HTTPS option to SSH,
 \begin{verbatim}
 git remote set-url origin git@github.com:STUFF
 \end{verbatim}
+You should be ready to go at this point.
 
-
-
-
-\paragraph{Basic commands}
+\paragraph{Basic commands} of \verb!git! are good to know.
+First of all if you make a new file, you need to \textit{add} it to the
+repository. Suppose the name of your new file was MY-NEW-FILE.tex. You should
+type:
 
 \begin{verbatim}
-git add -u
-git commit -m "this is my change"
+git add MY-NEW-FILE.tex
+git commit -m "I've add MY-NEW-FILE.tex"
 git push
 \end{verbatim}
+The \verb!add! includes the file in the files that \verb!git! tracks. The
+\verb!commit! says, ``hey I made a change that I want to keep track of.'' The
+\verb!push! says ``I want to share this with others.''
 
+If, on the other hand, you want to push changes made to files you already have, type:
+\begin{verbatim}
+git add -u
+git commit -m "I updated some files"
+git push
+\end{verbatim}
 
 \begin{verbatim}
 git add -u && git commit -m "this is my change" && git push
