--- a/ximeraUserManual/workflow/workflow.tex
+++ b/ximeraUserManual/workflow/workflow.tex
@@ -60,9 +60,8 @@ are good and can skip this. If not, and it responds with
 \verb!https://github.com/STUFF! the you
 need to change to SSH, read on!
 
-First we must create the key. There are instructions on \link[GitHub's
-
-      pages]{https://docs.github.com/en/authentication/connecting-to-github-with-ssh/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent}
+First we must create the key. There are instructions on \link[GitHub's pages]%
+{https://docs.github.com/en/authentication/connecting-to-github-with-ssh/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent}
 Once the key is created, go to your personal GitHub page, like
 \verb!https://github.com/bartsnapp! and:
 \begin{enumerate}
