--- a/ximeraUserManual/setup/setup.tex
+++ b/ximeraUserManual/setup/setup.tex
@@ -287,7 +287,7 @@ Here is a list of environments provided by Ximera:
 \verb!definition!, \verb!example!, \verb!exercise!, \verb!fact!,
 \verb!hypothesis!, \verb!lemma!, \verb!notation!, \verb!problem!,
 \verb!proposition!, \verb!question!, \verb!remark!, \verb!solution!,
-\verb!summary!, \verb!theorem!.
+\verb!summary!, \verb!theorem!, \verb!warning!.
 
 The preamble must be accessible  by all files.
 \begin{center}%%DIAGRAM OF FILE STRUCTURE
