--- a/ximeraUserManual/workflow/workflow.tex
+++ b/ximeraUserManual/workflow/workflow.tex
@@ -15,9 +15,7 @@ to provide a common deployment environment for MacOS, Windows, and Linux.
 
 \section{Docker and Visual Studio Code}
 
-\paragraph{Docker}
-
-Docker is a development utility that allows us to set up a computer within your
+\paragraph{Docker} is a development utility that allows us to set up a computer within your
 computer. You must remember to start Docker before you deploy. You can just let
 it run in the background. You can check the status of Docker by running
 \verb!docker ps! in a terminal session.
@@ -36,7 +34,7 @@ Windows machines via WSL. A typical workflow would be to:
             \verb!.gitignore!, will not be shown.
       \item To run a special command (like search and replace) do
             \verb!Ctrl-Shift-p!, and search for the command.
-      \item To open a terminal, use \verb!Ctrl-~!.
+      \item To toggle a UNIX-like terminal, use \verb!Ctrl-~!.
 \end{enumerate}
 
 \section{Using \texttt{git}}
